# docs/swagger.json
@@ -344,9 +344,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "review updated successfully",
+                        "description": "Updated review",
                         "schema": {
-                            "$ref": "#/definitions/dto.MessageResponse"
+                            "$ref": "#/definitions/model.Review"
                         }
                     },
                     "400": {
@@ -356,7 +356,7 @@
                         }
                     },
                     "401": {
-                        "description": "invalid user_id / unauthorized",
+                        "description": "Unauthorized or invalid user_id",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
@@ -771,6 +771,35 @@
                     "type": "integer"
                 },
                 "role": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.Review": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "placeID": {
+                    "type": "string"
+                },
+                "rating": {
+                    "type": "integer"
+                },
+                "tokenID": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                },
+                "userID": {
                     "type": "string"
                 }
             }
